Add todo listing endpoint
